# cathon

./: LICENSE  README.md  pyproject.toml
Grammar/: Tokens  cat.gram
cat/: __main__.py  basic.py  constants.py  errors.py  shell.py  version.py
cat/interpreter/: __init__.py  context.py  interpreter.py  table.py  values.py
cat/lexer/: lexer.py
cat/parser/: nodes.py  parser.py
cathon/: __init__.py  basic.py  cli.py  constants.py  errors.py  shell.py  token.py
cathon/interpreter/: interpreter.py  values.py
cathon/lexer/: __init__.py  lexer.py  position.py  tokens.py
cathon/parser/: delexer.py  nodes.py  parser.py
tests/: ast.py  lexer.py  test.cat
